--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
   },
   "dependencies": {
     "express": "4.13.4",
+    "material-ui": "^0.15.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-native": "^0.27.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.5",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0"
   },
