--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "url": "https://github.com/natesMI/ice_box/issues"
   },
   "dependencies": {
+    "body-parser": "^1.15.1",
     "express": "4.13.4",
     "knex": "^0.11.5",
     "material-ui": "^0.15.0",
@@ -47,6 +48,7 @@
     "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
+    "nodemon": "^1.9.2",
     "react-addons-test-utils": "^15.1.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.0"
