--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "knex": "^0.11.5",
     "material-ui": "^0.15.0",
     "mysql": "^2.11.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.0.0",
+    "passport-local": "^1.0.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-native": "^0.27.2",
