--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router-redux": "^4.0.5",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
+    "redux-form": "^5.2.5",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
