--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "dependencies": {
     "axios": "^0.12.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
     "express": "4.13.4",
+    "jwt-simple": "^0.5.0",
     "knex": "^0.11.5",
     "material-ui": "^0.15.0",
     "mysql": "^2.11.1",
