--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-form": "^5.2.5",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "request": "^2.72.0"
   },
   "devDependencies": {
     "babel-core": "^6.2.1",
