--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "knex": "^0.11.5",
     "material-ui": "^0.15.0",
     "mysql": "^2.11.1",
+    "node-schedule": "^1.1.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
     "passport-local": "^1.0.0",
