--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "4.13.4",
     "jwt-simple": "^0.5.0",
     "knex": "^0.11.5",
+    "lodash": "^4.13.1",
     "material-ui": "^0.15.0",
     "mysql": "^2.11.1",
     "node-schedule": "^1.1.0",
