--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "passport-jwt": "^2.0.0",
     "passport-local": "^1.0.0",
     "react": "^15.1.0",
+    "react-addons-css-transition-group": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-native": "^0.27.2",
     "react-redux": "^4.4.5",
