--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "compile": "webpack --config webpack.config.js",
+    "lint": "eslint src/components/appHeader.js --fix",
     "lint:server": "eslint server",
     "lint:server:fix": "npm run lint:server -- --fix",
     "lint:src": "eslint src",
