--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "test:watch": "npm run test -- --watch",
     "webpack-dev-server": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
+  "precommit": [
+    "lint"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ColdForge/icebox.git"
@@ -77,6 +80,7 @@
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
     "nodemon": "^1.9.2",
+    "pre-commit": "^1.1.3",
     "react-addons-test-utils": "^15.1.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.0"
