--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
     "classnames": "^2.2.5",
+    "cors": "^2.7.1",
     "express": "4.13.4",
     "jwt-simple": "^0.5.0",
     "knex": "^0.11.5",
