--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "redux-thunk": "^2.1.0",
     "request": "^2.72.0",
     "request-promise": "^3.0.0",
+    "sweetalert-react": "^0.4.4",
     "tether": "^1.3.2"
   },
   "devDependencies": {
