--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "url": "https://github.com/ColdForge/icebox/issues"
   },
   "dependencies": {
+    "aws-sdk": "^2.4.4",
     "axios": "^0.12.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
